--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
+    <!-- Additional CSS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
-
-    <header class="jumbotron">
+    <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -26,9 +29,9 @@
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 order-sm-last">
-                <h2>Discover & Review</h2>
+                <h2 class="text-sm-right">Discover & Review</h2>
             </div>
             <div class="col">
                 <h3>Our Campsites</h3>
@@ -36,7 +39,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2>Featured Campsites</h2>
             </div>
@@ -46,22 +49,18 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 order-sm-last">
-                <h2>Our Community Partners</h2>
+                <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
                 <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
             </div>
         </div>
-
     </div>
 
-   
-
     <footer>
-
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
@@ -73,22 +72,19 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-sm-5">
+                <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
                     <a href="http://instagram.com/">Instagram</a>
                     <a href="http://facebook.com/">Facebook</a>
                     <a href="http://twitter.com/">Twitter</a>
                     <a href="http://youtube.com/">YouTube</a>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-center">
                     Tel: 1-206-555-1234<br />
                     Email: campsites@nucamp.co
                 </div>
             </div>
         </div>
-
-
-        
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
