Icon from Fontawesome

--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 
     <title>Test What I Learn</title>
 </head>
@@ -19,7 +20,7 @@
 
         <div class="row bg-primary p-md-4 text-center p-sm-3">
             <div class="col">
-                <h1 class="text-white">Welcome to our page</h1>
+                <h1 class="text-white"><i class="fa fa-home fa-2x"></i> Welcome to our page</h1>
             </div>
         </div>
 
@@ -58,6 +59,9 @@
             <div class="col-lg-3 bg-secondary text-light p-3">
                 <h2 class="text-warning">Lorem ipsum dolor sit amet.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque et assumenda ut doloremque facere tenetur dolores sapiente voluptate esse? Magnam numquam laudantium laboriosam natus veniam quidem molestiae illo quis cupiditate.</p>
+                <p>
+                    <a href="https://facebook.com" title="Like us on Facebook"><i class="fa fa-facebook fa-2x text-white"></i></a>
+                </p>
             </div>
             <div class="col p-3">
                 <nav aria-label="breadcrumb">
@@ -67,7 +71,7 @@
                     </ol>
                 </nav>
 
-                <h2 class="text-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, minus?</h2>
+                <h2 class="text-success"><i class="fa fa-bullhorn fa-2x"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, minus?</h2>
                 <p class="text-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident doloribus repellendus ipsam ipsum molestiae aspernatur ab consequuntur inventore vitae sit, quasi repellat, nam asperiores, atque illo modi dolorum cumque impedit!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas veniam dolor commodi quae aut aspernatur accusamus, obcaecati veritatis eos molestiae? Autem sequi rem maiores saepe, alias eius porro facilis expedita modi minima dolorem recusandae accusamus! Molestiae, sapiente. Dolorem maiores, neque repellat, similique impedit earum atque velit tempora perspiciatis error ipsum repellendus nulla quas veniam eligendi sapiente asperiores tenetur modi eveniet quos praesentium illum ipsa consequuntur! <a href="http://" target="_blank" rel="noopener noreferrer">Ask for help</a> Tempora quos deleniti rerum ex, eius sequi repellendus commodi amet sit neque veniam doloremque placeat odio quam soluta. Ipsam, fugiat corrupti. Hic vero eos ex, magni ut, similique iste numquam autem commodi a aliquam quos?</p>
                 
