--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,7 @@
     <!-- Additional CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 
     <title>About Us - NuCamp: A Better Way To Camp</title>
 </head>
@@ -36,12 +37,12 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
 
-            <div class="collapse navbar-collapse" id="nucampNavbar">
+              <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item active"><a href="#" class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Sites</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    <li class="nav-item "><a href="/" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> About Us</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -97,19 +98,19 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/">Instagram</a>
-                    <a href="http://facebook.com/">Facebook</a>
-                    <a href="http://twitter.com/">Twitter</a>
-                    <a href="http://youtube.com/">YouTube</a>
+                    <a href="http://instagram.com/"><i class="fa fa-instagram"></i> Instagram</a>
+                    <a href="http://facebook.com/"><i class="fa fa-facebook"></i> Facebook</a>
+                    <a href="http://twitter.com/"><i class="fa fa-twitter"></i> Twitter</a>
+                    <a href="http://youtube.com/"><i class="fa fa-youtube"></i> YouTube</a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    Tel: 1-206-555-1234<br />
-                    Email: campsites@nucamp.co
+                    <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
+                    <i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.co
                 </div>
            </div>
         </div>
