--- a/contactus.html
+++ b/contactus.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -69,9 +70,10 @@
                 </address>
             </div>
             <div class="col">
-				<i class="fa fa-phone"></i> 1-206-555-1234<br>
-            	<i class="fa fa-envelope-o"></i> campsites@nucamp.co
+                <a href="tel:2065551234" role="button" class="btn btn-link"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                <a href="mailto:campsites@nucamp.co" role="button" class="btn btn-link"> <i class="fa fa-envelope-o"></i> campsites@nucamp.co</a><br />
             </div>
+
         </div>
 
         <div class="row row-content">
@@ -100,15 +102,16 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                    <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="http://twitter.com/" class="btn-twitter btn btn-social-icon"><i class="fa fa-twitter"></i></a>
+                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
-                    <i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
+
            </div>
         </div>
     </footer>
