--- a/test.html
+++ b/test.html
@@ -7,8 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="test.css">
+    
 
     <title>Test What I Learn</title>
 </head>
@@ -59,9 +61,8 @@
             <div class="col-lg-3 bg-secondary text-light p-3">
                 <h2 class="text-warning">Lorem ipsum dolor sit amet.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque et assumenda ut doloremque facere tenetur dolores sapiente voluptate esse? Magnam numquam laudantium laboriosam natus veniam quidem molestiae illo quis cupiditate.</p>
-                <p>
-                    <a href="https://facebook.com" title="Like us on Facebook"><i class="fa fa-facebook fa-2x text-white"></i></a>
-                </p>
+ 
+                
             </div>
             <div class="col p-3">
                 <nav aria-label="breadcrumb">
@@ -70,6 +71,33 @@
                         <li class="breadcrumb-item active" aria-current="page">Product</li>
                     </ol>
                 </nav>
+
+                <p>
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <label class="btn btn-secondary active">
+                            <input type="radio" name="options" id="option1" checked>Active
+                        </label>
+                        <label class="btn btn-secondary ">
+                            <input type="radio" name="options" id="option2" >Second
+                        </label>
+                        <label class="btn btn-secondary ">
+                            <input type="radio" name="options" id="option3" >Help
+                        </label>
+                    </div>
+                </p>
+
+
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-secondary active">
+                      <input type="radio" name="options" id="option1" checked> Active
+                    </label>
+                    <label class="btn btn-secondary">
+                      <input type="radio" name="options" id="option2"> Radio
+                    </label>
+                    <label class="btn btn-secondary">
+                      <input type="radio" name="options" id="option3"> Radio
+                    </label>
+                  </div>
 
                 <h2 class="text-success"><i class="fa fa-bullhorn fa-2x"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, minus?</h2>
                 <p class="text-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident doloribus repellendus ipsam ipsum molestiae aspernatur ab consequuntur inventore vitae sit, quasi repellat, nam asperiores, atque illo modi dolorum cumque impedit!</p>
