--- a/contactus.html
+++ b/contactus.html
@@ -110,7 +110,9 @@
                     <div class="form-group row">
                         <label for="email" class="col-md-2 col-form-label">Email</label>
                         <div class="col-md-10">
-                            <input type="email" name="email" id="email" placeholder="Email" class="form-control">
+                            <input type="email" name="email" id="email" placeholder="Email" class="form-control" required>
+                            <small class="form-text text-muted">We'll never share your email with anyone else.
+                            </small>
                         </div>
                         
                     </div>
