--- a/test.html
+++ b/test.html
@@ -65,46 +65,23 @@
                 
             </div>
             <div class="col p-3">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb p-2">
-                        <li class="breadcrumb-item"><a href="test.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Product</li>
-                    </ol>
-                </nav>
 
-                <p>
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                        <label class="btn btn-secondary active">
-                            <input type="radio" name="options" id="option1" checked>Active
-                        </label>
-                        <label class="btn btn-secondary ">
-                            <input type="radio" name="options" id="option2" >Second
-                        </label>
-                        <label class="btn btn-secondary ">
-                            <input type="radio" name="options" id="option3" >Help
-                        </label>
+                <div class="card"">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="https://source.unsplash.com/random/200x200" alt="">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Title</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, sint?</p>
+                                <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet.</small></p>
+                            </div>
+                        </div>
                     </div>
-                </p>
-
-
-                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-secondary active">
-                      <input type="radio" name="options" id="option1" checked> Active
-                    </label>
-                    <label class="btn btn-secondary">
-                      <input type="radio" name="options" id="option2"> Radio
-                    </label>
-                    <label class="btn btn-secondary">
-                      <input type="radio" name="options" id="option3"> Radio
-                    </label>
-                  </div>
-
-                <h2 class="text-success"><i class="fa fa-bullhorn fa-2x"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, minus?</h2>
-                <p class="text-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident doloribus repellendus ipsam ipsum molestiae aspernatur ab consequuntur inventore vitae sit, quasi repellat, nam asperiores, atque illo modi dolorum cumque impedit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas veniam dolor commodi quae aut aspernatur accusamus, obcaecati veritatis eos molestiae? Autem sequi rem maiores saepe, alias eius porro facilis expedita modi minima dolorem recusandae accusamus! Molestiae, sapiente. Dolorem maiores, neque repellat, similique impedit earum atque velit tempora perspiciatis error ipsum repellendus nulla quas veniam eligendi sapiente asperiores tenetur modi eveniet quos praesentium illum ipsa consequuntur! <a href="http://" target="_blank" rel="noopener noreferrer">Ask for help</a> Tempora quos deleniti rerum ex, eius sequi repellendus commodi amet sit neque veniam doloremque placeat odio quam soluta. Ipsam, fugiat corrupti. Hic vero eos ex, magni ut, similique iste numquam autem commodi a aliquam quos?</p>
+                </div>
                 
-                <h3 class="text-warning">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, dolores!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur illo, modi consectetur accusamus cupiditate illum? Adipisci recusandae ullam facilis dignissimos molestias obcaecati eaque qui quia quod omnis, corrupti animi voluptatum.</p>
+
 
                 <h3 class="text-danger">Lorem, ipsum dolor sit amet consectetur adipisicing.</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum fugit sit modi similique, natus eum perferendis non quae ab optio dicta expedita dignissimos excepturi in deleniti quidem quam unde nobis aperiam atque nostrum incidunt eligendi praesentium accusamus. Repellat totam aliquam expedita nemo, eveniet necessitatibus molestiae iste in nihil modi recusandae impedit laboriosam. Sapiente eaque beatae maiores soluta culpa ad sint. Optio sequi alias facilis nihil officia dignissimos dolores nobis. Maiores veritatis illum deleniti voluptate eveniet reprehenderit, cumque incidunt dicta corporis?</p>
