--- a/An_Quach_index.html
+++ b/An_Quach_index.html
@@ -10,10 +10,8 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
     <!-- Additional CSS -->
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -30,32 +28,16 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top ">
-        <div class="container">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-            <div class="collapse navbar-collapse" id="nucampNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About Us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
     <div class="container">
         <div class="row row-content align-items-center">
+            <!-- Awesome work! -->
             <div class="col-sm-4 col-md-3 order-sm-last">
                 <h2 class="text-sm-right">Discover & Review</h2>
             </div>
             <div class="col">
                 <h3>Our Campsites</h3>
-                <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own
+                    reviews!</p>
             </div>
         </div>
 
@@ -65,8 +47,9 @@
             </div>
             <div class="col">
                 <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-            </div >
+                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the
+                    shores of the pristine React Lake is a favorite for fly fishers.</p>
+            </div>
         </div>
 
         <div class="row row-content align-items-center">
@@ -75,12 +58,13 @@
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't
+                    beat.</p>
             </div>
         </div>
     </div>
 
-    <footer class="site-footer">
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
@@ -89,19 +73,19 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
-                        <li><a href="contactus.html">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="http://twitter.com/" class="btn-twitter btn btn-social-icon"><i class="fa fa-twitter"></i></a>
-                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube"></i></a>
+                    <a href="http://instagram.com/">Instagram</a>
+                    <a href="http://facebook.com/">Facebook</a>
+                    <a href="http://twitter.com/">Twitter</a>
+                    <a href="http://youtube.com/">YouTube</a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    Tel: 1-206-555-1234<br />
+                    Email: campsites@nucamp.co
                 </div>
             </div>
         </div>
