--- a/test.html
+++ b/test.html
@@ -74,7 +74,7 @@
                 <div class="card border-primary">
                     <div class="card-header bg-primary text-light">Header</div>
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/150x150"" alt="" class=" rounded-circle img-fluid">
+                        <img src="https://source.unsplash.com/random/150x150" alt="" class=" rounded-circle img-fluid">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, odio. Lorem ipsum dolor sit amet
                         consectetur adipisicing elit. Accusantium perspiciatis nobis
                         quasi, neque quaerat enim cupiditate accusamus consequatur explicabo quas.
