--- a/index.html
+++ b/index.html
@@ -109,6 +109,45 @@
 
             </div>
         </div>
+
+        <div class="row row-content">
+            <div class="col-sm-6 mx-auto">
+                <div class="card">
+                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="row form-group">
+                                <label for="numCampers" class="col-form-label col">Number of Campers</label>
+                                <div class="col-sm-6">
+                                    <select name="numCampers" id="numCampers" class="form-control">
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                            <div class="row form-group">
+                                <label for="date" class="col-form-label col">Date</label>
+                                <div class="col-sm-6">
+                                    <input type="date" id="date" name="date" class="form-control">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col">
+                                    <button class="btn btn-primary text-white" type="submit">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
     <footer class="site-footer">
