--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
+                <div class="col col-md-4 col-xl-2 align-self-center">
+                    <a href="#reserveForm" class="btn bg-info btn-lg text-white mt-4 text-nowrap">Reserve Campsite</a>
+                </div>
             </div>
         </div>
     </header>
@@ -115,7 +118,7 @@
                 <div class="card">
                     <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
                     <div class="card-body">
-                        <form>
+                        <form id="reserveForm">
                             <div class="row form-group">
                                 <label for="numCampers" class="col-form-label col">Number of Campers</label>
                                 <div class="col-sm-6">
