--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
             <a href="#" class="navbar-brand"><img src="img/logo.png" height="30" width="30"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
-              </button>
+            </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About Us</a></li>
+                    <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a>
+                    </li>
+                    <li class="nav-item"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About
+                            Us</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a href="contactus.html" class="nav-link"><i
+                                class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -58,12 +61,14 @@
             </div>
             <div class="col">
                 <div class="media">
-                    <img src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail" class="d-flex mr-3 img-thumbnail">
+                    <img src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail"
+                        class="d-flex mr-3 img-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Our Campsites</h3>
-                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your
+                            own reviews!</p>
                     </div>
-                
+
                 </div>
             </div>
         </div>
@@ -74,8 +79,9 @@
             </div>
             <div class="col">
                 <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-            </div >
+                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the
+                    shores of the pristine React Lake is a favorite for fly fishers.</p>
+            </div>
         </div>
 
         <div class="row row-content align-items-center">
@@ -87,10 +93,11 @@
                     <img src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" class="d-flex mr-3 img-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Bootstrap Outfitters</h3>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you
+                            can't beat.</p>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -109,14 +116,20 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="http://twitter.com/" class="btn-twitter btn btn-social-icon"><i class="fa fa-twitter"></i></a>
-                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube"></i></a>
+                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram"><i
+                            class="fa fa-instagram"></i></a>
+                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook"><i
+                            class="fa fa-facebook"></i></a>
+                    <a href="http://twitter.com/" class="btn-twitter btn btn-social-icon"><i
+                            class="fa fa-twitter"></i></a>
+                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i
+                            class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
+                        1-206-555-1234</a><br />
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
+                            class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
         </div>
