--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                     <li class="nav-item"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About
                             Us</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a href="contactus.html" class="nav-link"><i
-                                class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -64,12 +63,10 @@
             </div>
             <div class="col">
                 <div class="media">
-                    <img src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail"
-                        class="d-flex mr-3 img-thumbnail">
+                    <img src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail" class="d-flex mr-3 img-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Our Campsites</h3>
-                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your
-                            own reviews!</p>
+                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
                     </div>
 
                 </div>
@@ -84,10 +81,7 @@
                 <div class="media">
                     <div class="media-body align-self-center">
                         <h3>React Lake Campground</h3>
-                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground
-                            on
-                            the
-                            shores of the pristine React Lake is a favorite for fly fishers.</p>
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
 
                     <img src="img/react-lake-thumb.jpg" alt="" class="d-flex img-thumbnail ml-3">
@@ -105,8 +99,7 @@
                     <img src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" class="d-flex mr-3 img-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Bootstrap Outfitters</h3>
-                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you
-                            can't beat.</p>
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
                     </div>
                 </div>
 
@@ -167,20 +160,15 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram"><i
-                            class="fa fa-instagram"></i></a>
-                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook"><i
-                            class="fa fa-facebook"></i></a>
-                    <a href="http://twitter.com/" class="btn-twitter btn btn-social-icon"><i
-                            class="fa fa-twitter"></i></a>
-                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i
-                            class="fa fa-youtube"></i></a>
+                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="http://twitter.com/" class="btn-twitter btn btn-social-icon"><i class="fa fa-twitter"></i></a>
+                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
                     <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
                         1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
-                            class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
         </div>
