--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                         <h3>Our Campsites</h3>
                         <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -83,7 +82,7 @@
                         <h3>React Lake Campground</h3>
                         <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
-                    <img src="img/react-lake-thumb.jpg" alt="" class="d-flex img-thumbnail ml-3">
+                    <img src="img/react-lake-thumb.jpg" alt="react lake campground" class="d-flex img-thumbnail ml-3">
                 </div>
             </div>
         </div>
@@ -100,7 +99,6 @@
                         <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
                     </div>
                 </div>
-
             </div>
         </div>
 
@@ -122,7 +120,6 @@
                                         <option>6</option>
                                     </select>
                                 </div>
-
                             </div>
                             <div class="row form-group">
                                 <label for="date" class="col-form-label col">Date</label>
@@ -138,10 +135,8 @@
                         </form>
                     </div>
                 </div>
-
             </div>
         </div>
-
     </div>
 
     <footer class="site-footer">
@@ -164,8 +159,7 @@
                     <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
-                        1-206-555-1234</a><br />
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>1-206-555-1234</a><br />
                     <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
