--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="card-body">
                         <form id="reserveForm">
                             <div class="row form-group">
-                                <label for="numCampers" class="col-form-label col">Number of Campers</label>
+                                <label for="numCampers" class="col-form-label col-sm-6">Number of Campers</label>
                                 <div class="col-sm-6">
                                     <select name="numCampers" id="numCampers" class="form-control">
                                         <option>1</option>
