Finish Task 3 to main

--- a/index.html
+++ b/index.html
@@ -44,15 +44,10 @@
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-<<<<<<< HEAD
-                    <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-home fa-lg"></i>Home</a></li>
-                    <li class="nav-item"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About Us</a></li>
-=======
                     <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a>
                     </li>
                     <li class="nav-item"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About
                             Us</a></li>
->>>>>>> week2test
                     <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-item"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
@@ -71,8 +66,10 @@
                     <img src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail" class="d-flex mr-3 img-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Our Campsites</h3>
-                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your
+                            own reviews!</p>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -82,18 +79,18 @@
                 <h2>Featured Campsites</h2>
             </div>
             <div class="col">
-<<<<<<< HEAD
-                <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-=======
                 <div class="media">
                     <div class="media-body align-self-center">
                         <h3>React Lake Campground</h3>
-                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground
+                            on
+                            the
+                            shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
-                    <img src="img/react-lake-thumb.jpg" alt="react lake campground" class="d-flex img-thumbnail ml-3">
+
+                    <img src="img/react-lake-thumb.jpg" alt="" class="d-flex img-thumbnail ml-3">
                 </div>
->>>>>>> week2test
+
             </div>
         </div>
 
@@ -106,14 +103,11 @@
                     <img src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" class="d-flex mr-3 img-thumbnail">
                     <div class="media-body align-self-center">
                         <h3>Bootstrap Outfitters</h3>
-                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
-<<<<<<< HEAD
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you
+                            can't beat.</p>
                     </div>
                 </div>
 
-=======
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -124,7 +118,7 @@
                     <div class="card-body">
                         <form id="reserveForm">
                             <div class="row form-group">
-                                <label for="numCampers" class="col-form-label col-sm-6">Number of Campers</label>
+                                <label for="numCampers" class="col-form-label col">Number of Campers</label>
                                 <div class="col-sm-6">
                                     <select name="numCampers" id="numCampers" class="form-control">
                                         <option>1</option>
@@ -135,6 +129,7 @@
                                         <option>6</option>
                                     </select>
                                 </div>
+
                             </div>
                             <div class="row form-group">
                                 <label for="date" class="col-form-label col">Date</label>
@@ -150,9 +145,10 @@
                         </form>
                     </div>
                 </div>
->>>>>>> week2test
+
             </div>
         </div>
+
     </div>
 
     <footer class="site-footer">
@@ -175,12 +171,8 @@
                     <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-<<<<<<< HEAD
                     <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
                         1-206-555-1234</a><br />
-=======
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>1-206-555-1234</a><br />
->>>>>>> week2test
                     <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
