Add Nav-tabs to About Us

--- a/index.html
+++ b/index.html
@@ -121,15 +121,14 @@
                                 <label for="numCampers" class="col-form-label col">Number of Campers</label>
                                 <div class="col-sm-6">
                                     <select name="numCampers" id="numCampers" class="form-control">
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                        <option>4</option>
-                                        <option>5</option>
-                                        <option>6</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
                                     </select>
                                 </div>
-
                             </div>
                             <div class="row form-group">
                                 <label for="date" class="col-form-label col">Date</label>
