--- a/aboutus.html
+++ b/aboutus.html
@@ -40,8 +40,8 @@
             <a href="index.html" class="navbar-brand"><img src="img/logo.png" height="30" width="30"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="nucampNavbar">
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item "><a href="/" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> About Us</a></li>
@@ -52,7 +52,7 @@
         </div>
     </nav>
 
-    
+
 
     <div class="container">
 
@@ -63,7 +63,7 @@
                     <li class="breadcrumb-item">About</li>
                 </ol>
                 <h2>About Us</h2>
-               <hr />
+                <hr />
             </div>
         </div>
 
@@ -94,7 +94,7 @@
                 <div class="card bg-light mt-3">
                     <blockquote class="blockquote card-body">
                         <p class="mb-0">I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail.</p>
-                        <footer class="blockquote-footer">Muriel Strode, 
+                        <footer class="blockquote-footer">Muriel Strode,
                             <cite title="Source Title">"Wind-Wafted Wild Flowers" -
                                 The Open Court, 1903
                             </cite>
@@ -107,14 +107,41 @@
         <div class="row row-content">
             <div class="col">
                 <h3>Community Partners</h3>
-                <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-                <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
-                <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a href="#bootstrap" class="nav-link active" role="tab" data-toggle="tab">Bootstrap Outfitters</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#git" role="tab" data-toggle="tab" class="nav-link">Git Out Expeditions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#mongo" role="tab" data-toggle="tab" class="nav-link">Mongo Fly Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#node" role="tab" data-toggle="tab" class="nav-link">Node Outdoor Apparel</a>
+                    </li>
+                </ul>
+
+                <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade show active" id="bootstrap">
+                        <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
+                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="git">
+                        <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
+                        <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="mongo">
+                        <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
+                        <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="node">
+                        <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
+                        <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
@@ -150,7 +177,7 @@
                                 <td>423,000</td>
                                 <td>~3,000,000,000</td>
                             </tr>
-                          
+
                         </tbody>
                     </table>
                 </div>
@@ -160,7 +187,7 @@
     </div>
 
 
-   
+
 
     <footer class="site-footer">
         <div class="container">
@@ -185,7 +212,7 @@
                     <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
                     <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
 
