--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                             </div>
                         </div>
                         <div class="row form-group">
+                            <label for="siteType" class="col-form-label col-sm-6">Campsite Type</label>
+                            <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                <button type="button" name="siteType" id="siteTent" class="btn btn-success">Tent</button>
+                                <button type="button" name="siteType" id="siteRV" class="btn btn-primary">RV</button>
+                            </div>
+                        </div>
+                        <div class="row form-group">
                             <div class="col">
                                 <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                 <button class="btn btn-primary" type="submit">Search</button>
