--- a/contactus.html
+++ b/contactus.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="css/styles.css" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
