--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
 
                                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-success active">
-                                        <input type="radio" name="options" id="siteTent" autocomplete="off" value="tent">Tent
+                                        <input type="radio" name="siteType" id="siteTent" autocomplete="off" value="tent">Tent
                                     </label>
                                     <label class="btn btn-primary">
-                                        <input type="radio" name="options" id="siteRV" autocomplete="off" value="rv">RV
+                                        <input type="radio" name="siteType" id="siteRV" autocomplete="off" value="rv">RV
                                     </label>
                                 </div>
                             </div>
