--- a/index.html
+++ b/index.html
@@ -229,12 +229,7 @@
                             </div>
                             <div class="row form-group">
                                 <label for="siteType" class="col-form-label col-sm-6">Campsite Type</label>
-                                <!-- <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
-                                    <button type="button" name="siteType" id="siteTent" class="btn btn-success" value="tent">Tent</button>
-                                    <button type="button" name="siteType" id="siteRV" class="btn btn-primary" value="rv">RV</button>
-                                </div> -->
-
-                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
                                     <label class="btn btn-success active">
                                         <input type="radio" name="siteType" id="siteTent" autocomplete="off" value="tent">Tent
                                     </label>
